Use jack_client_open instead of jack_client_new
jack_client_new() is deprecated and only extremely old jack releases did
not have jack_client_open()

Prevents warning:
> fweelin_audioio.cc:277:17: warning: 'jack_client_t* jack_client_new(const char*)' is deprecated [-Wdeprecated-declarations]

--- a/configure.ac
+++ b/configure.ac
@@ -52,7 +52,7 @@ AC_CHECK_LIB([asound], [main], ,
   [AC_MSG_ERROR(AUDIO: You need ALSA installed (libasound2-dev).
 		http://www.alsa-project.org/)])
 
-AC_CHECK_LIB([jack], [jack_client_new], , 
+AC_CHECK_LIB([jack], [jack_client_open], , 
   [AC_MSG_ERROR(AUDIO: You need JACK audio library (libjack-dev) installed.
 		http://jackit.sourceforge.net/)])
 
